Update end game button styles

--- a/viikko7/kivi-paperi-sakset/src/templates/game_over.html
+++ b/viikko7/kivi-paperi-sakset/src/templates/game_over.html
@@ -99,6 +99,9 @@
         background-color: #0b7dda;
         transform: translateY(-2px);
       }
+      a {
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
